<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Sensor delay values -->
    <string name="SENSOR_DELAY_NORMAL">3</string> <!-- android.hardware.SensorManager.SENSOR_DELAY_NORMAL -->
    <string name="SENSOR_DELAY_UI">2</string> <!-- android.hardware.SensorManager.SENSOR_DELAY_UI -->
    <string name="SENSOR_DELAY_GAME">1</string> <!-- android.hardware.SensorManager.SENSOR_DELAY_GAME -->
    <string name="SENSOR_DELAY_FASTEST">0</string> <!-- android.hardware.SensorManager.SENSOR_DELAY_FASTEST -->


    <!-- Audio source values -->
    <string name="CAMCORDER">5</string> <!-- android.media.MediaRecorder.AudioSource.CAMCORDER -->
    <string name="MIC">1</string> <!-- android.media.MediaRecorder.AudioSource.CAMCORDER -->


    <!-- Audio sample rate values -->
    <string name="Rate44100">44100</string>
    <string name="Rate22050">22050</string>
    <string name="Rate16000">16000</string>
    <string name="Rate11025">11025</string>
    <string name="Rate8000">8000</string>

    <!-- Audio channel values -->
    <string name="CHANNEL_IN_MONO">16</string> <!-- android.media.AudioFormat.CHANNEL_IN_MONO -->
    <string name="CHANNEL_IN_STEREO">12</string> <!-- android.media.AudioFormat.CHANNEL_IN_STEREO -->


    <!-- Audio format values -->
    <string name="ENCODING_PCM_16BIT">2</string> <!-- android.media.AudioFormat.ENCODING_PCM_16BIT -->
    <string name="ENCODING_PCM_8BIT">3</string> <!-- android.media.AudioFormat.ENCODING_PCM_8BIT -->


    <!-- Server address settings strings -->
    <string name="pref_server_addr_summ">Domain name or IP address</string>
    <string name="pref_server_addr">Server Address</string>
    <string name="default_server_addr">kaifei.info</string>

    <!-- Server port settings strings -->
    <string name="pref_server_port_summ">Port of BearLoc service</string>
    <string name="pref_server_port">Server Port</string>
    <string name="default_server_port">10080</string>

    <!-- Accelerometer settings strings -->
    <string name="pref_acc_title">Accelerometer</string>
    <string name="pref_acc_enable_summ">Enable accelerometer sampling</string>
    <string name="pref_acc_enable">Sample Accelerometer</string>
    <string name="default_acc_enable">true</string>
    <string name="pref_acc_duration_summ">Sample duration in milliseconds</string>
    <string name="pref_acc_duration">Duration</string>
    <string name="default_acc_duration">-1</string>
    <string name="pref_acc_delay_summ">Sample delay in milliseconds</string>
    <string name="pref_acc_delay">Speed (Delay)</string>
    <string name="default_acc_delay_value">@string/SENSOR_DELAY_GAME</string>

    <!-- Ambient temperature settings string -->
    <string name="pref_ambitemp_title">Ambient Temperature</string>
    <string name="pref_ambitemp_enable_summ">Enable ambient temperature sampling</string>
    <string name="pref_ambitemp_enable">Sample Temperature</string>
    <string name="default_ambitemp_enable">true</string>
    <string name="pref_ambitemp_duration_summ">Sample duration in milliseconds</string>
    <string name="pref_ambitemp_duration">Duration</string>
    <string name="default_ambitemp_duration">1000</string>
    <string name="pref_ambitemp_delay_summ">Sample delay in milliseconds</string>
    <string name="pref_ambitemp_delay">Speed (Delay)</string>
    <string name="default_ambitemp_delay_value">@string/SENSOR_DELAY_NORMAL</string>

    <!-- Atmospheric pressure settings string -->
    <string name="pref_atmo_pressure_title">Atmospheric Pressure</string>
    <string name="pref_atmo_pressure_enable_summ">Enable atmospheric pressure sampling</string>
    <string name="pref_atmo_pressure_enable">Sample Pressure</string>
    <string name="default_atmo_pressure_enable">true</string>
    <string name="pref_atmo_pressure_duration_summ">Sample duration in milliseconds</string>
    <string name="pref_atmo_pressure_duration">Duration</string>
    <string name="default_atmo_pressure_duration">1000</string>
    <string name="pref_atmo_pressure_delay_summ">Sample delay in milliseconds</string>
    <string name="pref_atmo_pressure_delay">Speed (Delay)</string>
    <string name="default_atmo_pressure_delay_value">@string/SENSOR_DELAY_NORMAL</string>

    <!-- Audio settings strings -->
    <string name="pref_audio_title">Audio</string>
    <string name="pref_audio_enable_summ">Enable Audio recording</string>
    <string name="pref_audio_enable">Record Audio</string>
    <string name="default_audio_enable">true</string>
    <string name="pref_audio_duration_summ">Audio duration in milliseconds</string>
    <string name="pref_audio_duration">Audio Duration</string>
    <string name="default_audio_duration">1000</string>
    <string name="pref_audio_src_summ">The microphone to use</string>
    <string name="pref_audio_src">Audio Source</string>
    <string name="default_audio_src_value">@string/CAMCORDER</string>
    <string name="pref_audio_sample_rate_summ">Sample rate in Hertz</string>
    <string name="pref_audio_sample_rate">Audio Sample Rate</string>
    <string name="default_audio_sample_rate_value">@string/Rate44100</string> <!-- Only 44100 is guaranteed to work -->
    <string name="pref_audio_channel_summ">Number of separate audio streams</string>
    <string name="pref_audio_channel">Audio Channel</string>
    <string name="default_audio_channel_value">@string/CHANNEL_IN_MONO</string> <!-- Only MONO is guaranteed to work -->
    <string name="pref_audio_format_summ">Number of bits per sample</string>
    <string name="pref_audio_format">Audio Data Format</string>
    <string name="default_audio_format_value">@string/ENCODING_PCM_16BIT</string> <!-- Only 16BIT is guaranteed to work -->


    <!-- Humidity settings string -->
    <string name="pref_humidity_title">Humidity</string>
    <string name="pref_humidity_enable_summ">Enable humidity sampling</string>
    <string name="pref_humidity_enable">Sample Humidity</string>
    <string name="default_humidity_enable">true</string>
    <string name="pref_humidity_duration_summ">Sample duration in milliseconds</string>
    <string name="pref_humidity_duration">Duration</string>
    <string name="default_humidity_duration">1000</string>
    <string name="pref_humidity_delay_summ">Sample delay in milliseconds</string>
    <string name="pref_humidity_delay">Speed (Delay)</string>
    <string name="default_humidity_delay_value">@string/SENSOR_DELAY_NORMAL</string>

    <!-- Light settings string -->
    <string name="pref_light_title">Light</string>
    <string name="pref_light_enable_summ">Enable light sampling</string>
    <string name="pref_light_enable">Sample Light</string>
    <string name="default_light_enable">true</string>
    <string name="pref_light_duration_summ">Sample duration in milliseconds</string>
    <string name="pref_light_duration">Duration</string>
    <string name="default_light_duration">1000</string>
    <string name="pref_light_delay_summ">Sample delay in milliseconds</string>
    <string name="pref_light_delay">Speed (Delay)</string>
    <string name="default_light_delay_value">@string/SENSOR_DELAY_NORMAL</string>

    <!-- Magnetic settings string -->
    <string name="pref_magnetic_title">Magnetic</string>
    <string name="pref_magnetic_enable_summ">Enable magnetic sampling</string>
    <string name="pref_magnetic_enable">Sample Magnetic</string>
    <string name="default_magnetic_enable">true</string>
    <string name="pref_magnetic_duration_summ">Delay duration in milliseconds</string>
    <string name="pref_magnetic_duration">Duration</string>
    <string name="default_magnetic_duration">1000</string>
    <string name="pref_magnetic_delay_summ">Sample delay in milliseconds</string>
    <string name="pref_magnetic_delay">Speed (Delay)</string>
    <string name="default_magnetic_delay_value">@string/SENSOR_DELAY_GAME</string>

    <!-- Geographic Location settings strings -->
    <string name="pref_geoloc_title">Geographic Location</string>
    <string name="pref_geoloc_enable_summ">Enable geolocation sampling</string>
    <string name="pref_geoloc_enable">Sample GeoLocation</string>
    <string name="default_geoloc_enable">true</string>
    <string name="pref_geoloc_duration_summ">Sample duration in milliseconds</string>
    <string name="pref_geoloc_duration">Duration</string>
    <string name="default_geoloc_duration">1000</string>
    <string name="pref_geoloc_min_delay_summ">Minimum delay of updates in milliseconds</string>
    <string name="pref_geoloc_min_delay">Minimum Delay</string>
    <string name="default_geoloc_min_delay">0</string>
    <string name="pref_geoloc_min_dist_summ">Minimum distance of updates in meters</string>
    <string name="pref_geoloc_min_dist">Minimum Distance</string>
    <string name="default_geoloc_min_dist">0</string>

    <!-- Gravity settings string -->
    <string name="pref_gravity_title">Gravity</string>
    <string name="pref_gravity_enable_summ">Enable gravity sampling</string>
    <string name="pref_gravity_enable">Sample Gravity</string>
    <string name="default_gravity_enable">true</string>
    <string name="pref_gravity_duration_summ">Sample duration in milliseconds</string>
    <string name="pref_gravity_duration">Duration</string>
    <string name="default_gravity_duration">-1</string>
    <string name="pref_gravity_delay_summ">Sample delay in milliseconds</string>
    <string name="pref_gravity_delay">Speed (Delay)</string>
    <string name="default_gravity_delay_value">@string/SENSOR_DELAY_GAME</string>

    <!-- Gyroscope settings string -->
    <string name="pref_gyro_title">Gyroscope</string>
    <string name="pref_gyro_enable_summ">Enable gyroscope sampling</string>
    <string name="pref_gyro_enable">Sample Gyroscope</string>
    <string name="default_gyro_enable">true</string>
    <string name="pref_gyro_duration_summ">Sample duration in milliseconds</string>
    <string name="pref_gyro_duration">Duration</string>
    <string name="default_gyro_duration">-1</string>
    <string name="pref_gyro_delay_summ">Sample delay in milliseconds</string>
    <string name="pref_gyro_delay">Speed (Delay)</string>
    <string name="default_gyro_delay_value">@string/SENSOR_DELAY_GAME</string>

    <!-- Proximity settings string -->
    <string name="pref_proximity_title">Proximity</string>
    <string name="pref_proximity_enable_summ">Enable proximity sampling</string>
    <string name="pref_proximity_enable">Sample Proximity</string>
    <string name="default_proximity_enable">true</string>
    <string name="pref_proximity_duration_summ">Sample duration in milliseconds</string>
    <string name="pref_proximity_duration">Duration</string>
    <string name="default_proximity_duration">1000</string>
    <string name="pref_proximity_delay_summ">Sample delay in milliseconds</string>
    <string name="pref_proximity_delay">Speed (Delay)</string>
    <string name="default_proximity_delay_value">@string/SENSOR_DELAY_NORMAL</string>

    <!-- Wifi settings strings -->
    <string name="pref_wifi_title">Wifi</string>
    <string name="pref_wifi_enable_summ">Enable Wifi signal strength sampling</string>
    <string name="pref_wifi_enable">Sample Wifi</string>
    <string name="default_wifi_enable">true</string>
    <string name="pref_wifi_duration_summ">Sample duration in milliseconds</string>
    <string name="pref_wifi_duration">Duration</string>
    <string name="default_wifi_duration">1000</string>
    <string name="pref_wifi_delay_summ">Sample delay in milliseconds</string>
    <string name="pref_wifi_delay">Speed (Delay)</string>
    <string name="default_wifi_delay_value">@string/SENSOR_DELAY_NORMAL</string>

</resources>