<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="pref_acc_settings"
        android:title="@string/pref_acc_title" >
        <CheckBoxPreference
            android:defaultValue="@string/default_acc_enable"
            android:key="pref_acc_enable"
            android:summary="@string/pref_acc_enable_summ"
            android:title="@string/pref_acc_enable" />

        <EditTextPreference
            android:defaultValue="@string/default_acc_duration"
            android:dependency="pref_acc_enable"
            android:inputType="number"
            android:key="pref_acc_duration"
            android:summary="@string/pref_acc_duration_summ"
            android:title="@string/pref_acc_duration" />

        <ListPreference
            android:defaultValue="@string/default_acc_delay_value"
            android:dependency="pref_acc_enable"
            android:entries="@array/pref_sensor_delay_entries"
            android:entryValues="@array/pref_sensor_delay_values"
            android:key="pref_acc_delay"
            android:summary="@string/pref_acc_delay_summ"
            android:title="@string/pref_acc_delay" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_ambitemp_settings"
        android:title="@string/pref_ambitemp_title" >
        <CheckBoxPreference
            android:defaultValue="@string/default_ambitemp_enable"
            android:key="pref_ambitemp_enable"
            android:summary="@string/pref_ambitemp_enable_summ"
            android:title="@string/pref_ambitemp_enable" />

        <EditTextPreference
            android:defaultValue="@string/default_ambitemp_duration"
            android:dependency="pref_ambitemp_enable"
            android:inputType="number"
            android:key="pref_ambitemp_duration"
            android:summary="@string/pref_ambitemp_duration_summ"
            android:title="@string/pref_ambitemp_duration" />

        <ListPreference
            android:defaultValue="@string/default_ambitemp_delay_value"
            android:dependency="pref_ambitemp_enable"
            android:entries="@array/pref_sensor_delay_entries"
            android:entryValues="@array/pref_sensor_delay_values"
            android:key="pref_ambitemp_delay"
            android:summary="@string/pref_ambitemp_delay_summ"
            android:title="@string/pref_ambitemp_delay" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_atmo_pressure_settings"
        android:title="@string/pref_atmo_pressure_title" >
        <CheckBoxPreference
            android:defaultValue="@string/default_atmo_pressure_enable"
            android:key="pref_atmo_pressure_enable"
            android:summary="@string/pref_atmo_pressure_enable_summ"
            android:title="@string/pref_atmo_pressure_enable" />

        <EditTextPreference
            android:defaultValue="@string/default_atmo_pressure_duration"
            android:dependency="pref_atmo_pressure_enable"
            android:inputType="number"
            android:key="pref_atmo_pressure_duration"
            android:summary="@string/pref_atmo_pressure_duration_summ"
            android:title="@string/pref_atmo_pressure_duration" />

        <ListPreference
            android:defaultValue="@string/default_atmo_pressure_delay_value"
            android:dependency="pref_atmo_pressure_enable"
            android:entries="@array/pref_sensor_delay_entries"
            android:entryValues="@array/pref_sensor_delay_values"
            android:key="pref_atmo_pressure_delay"
            android:summary="@string/pref_atmo_pressure_delay_summ"
            android:title="@string/pref_atmo_pressure_delay" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_audio_settings"
        android:title="@string/pref_audio_title" >
        <CheckBoxPreference
            android:defaultValue="@string/default_audio_enable"
            android:key="pref_audio_enable"
            android:summary="@string/pref_audio_enable_summ"
            android:title="@string/pref_audio_enable" />

        <EditTextPreference
            android:defaultValue="@string/default_audio_duration"
            android:dependency="pref_audio_enable"
            android:inputType="number"
            android:key="pref_audio_duration"
            android:summary="@string/pref_audio_duration_summ"
            android:title="@string/pref_audio_duration" />

        <ListPreference
            android:defaultValue="@string/default_audio_src_value"
            android:dependency="pref_audio_enable"
            android:entries="@array/pref_audio_src_entries"
            android:entryValues="@array/pref_audio_src_values"
            android:key="pref_audio_src"
            android:summary="@string/pref_audio_src_summ"
            android:title="@string/pref_audio_src" />
        <ListPreference
            android:defaultValue="@string/default_audio_sample_rate_value"
            android:dependency="pref_audio_enable"
            android:entries="@array/pref_audio_sample_rate_entries"
            android:entryValues="@array/pref_audio_sample_rate_values"
            android:key="pref_audio_sample_rate"
            android:summary="@string/pref_audio_sample_rate_summ"
            android:title="@string/pref_audio_sample_rate" />
        <ListPreference
            android:defaultValue="@string/default_audio_channel_value"
            android:dependency="pref_audio_enable"
            android:entries="@array/pref_audio_channel_entries"
            android:entryValues="@array/pref_audio_channel_values"
            android:key="pref_audio_channel"
            android:summary="@string/pref_audio_channel_summ"
            android:title="@string/pref_audio_channel" />
        <ListPreference
            android:defaultValue="@string/default_audio_format_value"
            android:dependency="pref_audio_enable"
            android:entries="@array/pref_audio_format_entries"
            android:entryValues="@array/pref_audio_format_values"
            android:key="pref_audio_format"
            android:summary="@string/pref_audio_format_summ"
            android:title="@string/pref_audio_format" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_humidity_settings"
        android:title="@string/pref_humidity_title" >
        <CheckBoxPreference
            android:defaultValue="@string/default_humidity_enable"
            android:key="pref_humidity_enable"
            android:summary="@string/pref_humidity_enable_summ"
            android:title="@string/pref_humidity_enable" />

        <EditTextPreference
            android:defaultValue="@string/default_humidity_duration"
            android:dependency="pref_humidity_enable"
            android:inputType="number"
            android:key="pref_humidity_duration"
            android:summary="@string/pref_humidity_duration_summ"
            android:title="@string/pref_humidity_duration" />

        <ListPreference
            android:defaultValue="@string/default_humidity_delay_value"
            android:dependency="pref_humidity_enable"
            android:entries="@array/pref_sensor_delay_entries"
            android:entryValues="@array/pref_sensor_delay_values"
            android:key="pref_humidity_delay"
            android:summary="@string/pref_humidity_delay_summ"
            android:title="@string/pref_humidity_delay" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_light_settings"
        android:title="@string/pref_light_title" >
        <CheckBoxPreference
            android:defaultValue="@string/default_light_enable"
            android:key="pref_light_enable"
            android:summary="@string/pref_light_enable_summ"
            android:title="@string/pref_light_enable" />

        <EditTextPreference
            android:defaultValue="@string/default_light_duration"
            android:dependency="pref_light_enable"
            android:inputType="number"
            android:key="pref_light_duration"
            android:summary="@string/pref_light_duration_summ"
            android:title="@string/pref_light_duration" />

        <ListPreference
            android:defaultValue="@string/default_light_delay_value"
            android:dependency="pref_light_enable"
            android:entries="@array/pref_sensor_delay_entries"
            android:entryValues="@array/pref_sensor_delay_values"
            android:key="pref_light_delay"
            android:summary="@string/pref_light_delay_summ"
            android:title="@string/pref_light_delay" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_magnetic_settings"
        android:title="@string/pref_magnetic_title" >
        <CheckBoxPreference
            android:defaultValue="@string/default_magnetic_enable"
            android:key="pref_magnetic_enable"
            android:summary="@string/pref_magnetic_enable_summ"
            android:title="@string/pref_magnetic_enable" />

        <EditTextPreference
            android:defaultValue="@string/default_magnetic_duration"
            android:dependency="pref_magnetic_enable"
            android:inputType="number"
            android:key="pref_magnetic_duration"
            android:summary="@string/pref_magnetic_duration_summ"
            android:title="@string/pref_magnetic_duration" />

        <ListPreference
            android:defaultValue="@string/default_magnetic_delay_value"
            android:dependency="pref_magnetic_enable"
            android:entries="@array/pref_sensor_delay_entries"
            android:entryValues="@array/pref_sensor_delay_values"
            android:key="pref_magnetic_delay"
            android:summary="@string/pref_magnetic_delay_summ"
            android:title="@string/pref_magnetic_delay" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_geoloc_settings"
        android:title="@string/pref_geoloc_title" >
        <CheckBoxPreference
            android:defaultValue="@string/default_geoloc_enable"
            android:key="pref_geoloc_enable"
            android:summary="@string/pref_geoloc_enable_summ"
            android:title="@string/pref_geoloc_enable" />

        <EditTextPreference
            android:defaultValue="@string/default_geoloc_duration"
            android:dependency="pref_geoloc_enable"
            android:inputType="number"
            android:key="pref_geoloc_duration"
            android:summary="@string/pref_geoloc_duration_summ"
            android:title="@string/pref_geoloc_duration" />
        <EditTextPreference
            android:defaultValue="@string/default_geoloc_min_delay"
            android:dependency="pref_geoloc_enable"
            android:key="pref_geoloc_min_delay"
            android:summary="@string/pref_geoloc_min_delay_summ"
            android:title="@string/pref_geoloc_min_delay" />
        <EditTextPreference
            android:defaultValue="@string/default_geoloc_min_dist"
            android:dependency="pref_geoloc_enable"
            android:key="pref_geoloc_min_dist"
            android:summary="@string/pref_geoloc_min_dist_summ"
            android:title="@string/pref_geoloc_min_dist" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_gravity_settings"
        android:title="@string/pref_gravity_title" >
        <CheckBoxPreference
            android:defaultValue="@string/default_gravity_enable"
            android:key="pref_gravity_enable"
            android:summary="@string/pref_gravity_enable_summ"
            android:title="@string/pref_gravity_enable" />

        <EditTextPreference
            android:defaultValue="@string/default_gravity_duration"
            android:dependency="pref_gravity_enable"
            android:inputType="number"
            android:key="pref_gravity_duration"
            android:summary="@string/pref_gravity_duration_summ"
            android:title="@string/pref_gravity_duration" />

        <ListPreference
            android:defaultValue="@string/default_gravity_delay_value"
            android:dependency="pref_gravity_enable"
            android:entries="@array/pref_sensor_delay_entries"
            android:entryValues="@array/pref_sensor_delay_values"
            android:key="pref_gravity_delay"
            android:summary="@string/pref_gravity_delay_summ"
            android:title="@string/pref_gravity_delay" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_gyro_settings"
        android:title="@string/pref_gyro_title" >
        <CheckBoxPreference
            android:defaultValue="@string/default_gyro_enable"
            android:key="pref_gyro_enable"
            android:summary="@string/pref_gyro_enable_summ"
            android:title="@string/pref_gyro_enable" />

        <EditTextPreference
            android:defaultValue="@string/default_gyro_duration"
            android:dependency="pref_gyro_enable"
            android:inputType="number"
            android:key="pref_gyro_duration"
            android:summary="@string/pref_gyro_duration_summ"
            android:title="@string/pref_gyro_duration" />

        <ListPreference
            android:defaultValue="@string/default_gyro_delay_value"
            android:dependency="pref_gyro_enable"
            android:entries="@array/pref_sensor_delay_entries"
            android:entryValues="@array/pref_sensor_delay_values"
            android:key="pref_gyro_delay"
            android:summary="@string/pref_gyro_delay_summ"
            android:title="@string/pref_gyro_delay" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_proximity_settings"
        android:title="@string/pref_proximity_title" >
        <CheckBoxPreference
            android:defaultValue="@string/default_proximity_enable"
            android:key="pref_proximity_enable"
            android:summary="@string/pref_proximity_enable_summ"
            android:title="@string/pref_proximity_enable" />

        <EditTextPreference
            android:defaultValue="@string/default_proximity_duration"
            android:dependency="pref_proximity_enable"
            android:inputType="number"
            android:key="pref_proximity_duration"
            android:summary="@string/pref_proximity_duration_summ"
            android:title="@string/pref_proximity_duration" />

        <ListPreference
            android:defaultValue="@string/default_proximity_delay_value"
            android:dependency="pref_proximity_enable"
            android:entries="@array/pref_sensor_delay_entries"
            android:entryValues="@array/pref_sensor_delay_values"
            android:key="pref_proximity_delay"
            android:summary="@string/pref_proximity_delay_summ"
            android:title="@string/pref_proximity_delay" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_wifi_settings"
        android:title="@string/pref_wifi_title" >
        <CheckBoxPreference
            android:defaultValue="@string/default_wifi_enable"
            android:key="pref_wifi_enable"
            android:summary="@string/pref_wifi_enable_summ"
            android:title="@string/pref_wifi_enable" />

        <EditTextPreference
            android:defaultValue="@string/default_wifi_duration"
            android:dependency="pref_wifi_enable"
            android:inputType="number"
            android:key="pref_wifi_duration"
            android:summary="@string/pref_wifi_duration_summ"
            android:title="@string/pref_wifi_duration" />

        <ListPreference
            android:defaultValue="@string/default_wifi_delay_value"
            android:dependency="pref_wifi_enable"
            android:entries="@array/pref_sensor_delay_entries"
            android:entryValues="@array/pref_sensor_delay_values"
            android:key="pref_wifi_delay"
            android:summary="@string/pref_wifi_delay_summ"
            android:title="@string/pref_wifi_delay" />
    </PreferenceCategory>

</PreferenceScreen>